# struct-compression-analyzer

./: .gitignore  CLAUDE.md  CONTRIBUTING.MD  Cargo.toml  LICENSE  README-DEV.MD  README.MD  README.md  flake.nix  format-schema.md
.github/: changelog.hbs  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: rust.yml
schemas/: bc7-mode0-blocks-with-partition.yaml  bc7-mode0-blocks.yaml  dxt1-block.yaml
src/: .gitignore  AGENTS.md  Cargo.toml  lib.rs
src/struct-compression-analyzer/: Cargo.toml  README.MD
src/struct-compression-analyzer-cli/: Cargo.toml  README.MD
src/struct-compression-analyzer-cli/src/: main.rs
src/struct-compression-analyzer/src/: analysis_results.rs  analyze_utils.rs  analyzer.rs  brute_force.rs  constants.rs  csv_writer.rs  lib.rs  offset_evaluator.rs  schema.rs  split_comparisons.rs
src/struct-compression-analyzer/src/brute_force/: brute_force_custom.rs  brute_force_split.rs  mod.rs
src/struct-compression-analyzer/src/compare_groups/: mod.rs  test_helpers.rs  write_array.rs  write_struct.rs
src/struct-compression-analyzer/src/comparison/: mod.rs  split_comparison.rs  stats.rs
src/struct-compression-analyzer/src/comparison/compare_groups/: mod.rs  test_helpers.rs
src/struct-compression-analyzer/src/comparison/compare_groups/generate_bytes/: mod.rs  write_array.rs  write_struct.rs
src/struct-compression-analyzer/src/csv/: mod.rs
src/struct-compression-analyzer/src/plot/: mod.rs
src/struct-compression-analyzer/src/results/: analysis_results.rs  merged_analysis_results.rs  mod.rs
src/struct-compression-analyzer/src/utils/: analyze_utils.rs  bitstream_ext.rs  mod.rs
