[workspace]
members = [
    "src/struct-compression-analyzer", 
    "src/struct-compression-analyzer-cli"
]
resolver = "2"

# Profile configurations remain in workspace root
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

