[package]
name = "struct-compression-analyzer-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for struct-compression-analyzer"
repository = "https://github.com/Sewer56/struct-compression-analyzer"
license-file = "../../LICENSE"
readme = "README.MD"

[dependencies]
struct-compression-analyzer = { version = "0.1.0", path = "../struct-compression-analyzer" }
argh = "0.1.13"
anyhow = "1.0.95"
rayon = "1.10.0"
walkdir = "2.5.0"
mimalloc = "0.1.43"
indicatif = "0.18.3"