[package]
name = "struct-compression-analyzer"
version = "0.1.0"
edition = "2021"
description = "Analyzes the bit distribution of packed structures."
repository = "https://github.com/Sewer56/struct-compression-analyzer"
license-file = "../LICENSE"
readme = "../README.MD"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
