[package]
name = "struct-compression-analyzer"
version = "0.1.0"
edition = "2021"
description = "Analyzes the bit distribution of packed structures."
repository = "https://github.com/Sewer56/struct-compression-analyzer"
license-file = "../LICENSE"
readme = "../README.MD"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.11"
indexmap = { version = "2.2.5", features = ["serde"] }
bitstream-io = { version = "2.6.0" }
lossless-transform-utils = "0.1.0"
serde-aux = "4.5.0"