[package]
name = "struct-compression-analyzer"
version = "0.1.0"
edition = "2021"
description = "Analyzes the bit distribution of packed structures."
repository = "https://github.com/Sewer56/struct-compression-analyzer"
license-file = "../../LICENSE"
readme = "README.MD"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.11"
indexmap = { version = "2.13.0", features = ["serde"] }
bitstream-io = { version = "4.9.0" }
lossless-transform-utils = "0.1.0"
serde-aux = "4.5.0"
walkdir = "2.5.0"
zstd = { version = "0.13.3" }
derive_more = { version = "2.1.1", features = ["from_str"] }
csv = "1.3"
sanitize-filename = "0.6"
rayon = "1.10.0"
ahash = "0.8.11"
rustc-hash = "2.1.1"
plotters = "0.3.7"
branches = "0.4.4"

# Required 

[dev-dependencies]
anyhow = "1.0.95"
